# aoc-2023

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Toolchain.cmake  env_setup.sh  justfile  pixi.toml
.github/workflows/: ci.yaml
day01/: CMakeLists.txt
day02/: main.cpp
day03/: CMakeLists.txt  main.cpp
day04/: CMakeLists.txt
day05/: CMakeLists.txt  main2.cpp
day06/: main.cpp
day06/tests/: tests.cpp
day07/: CMakeLists.txt  main.cpp
day07/lib/: day7.h
day08/: main.cpp  main2.cpp
day09/: CMakeLists.txt  main.cpp
day1/: main.cpp  main_2.cpp
day10/: CMakeLists.txt  main.cpp  main2.cpp
day11/: CMakeLists.txt  main.cpp  main2.cpp
day12/: CMakeLists.txt  main.cpp  main2.cpp
day13/: CMakeLists.txt  main.cpp  main2.cpp
day14/: CMakeLists.txt  main.cpp  main2.cpp
day15/: CMakeLists.txt  main.cpp  main2.cpp
day16/: CMakeLists.txt  main.cpp  main2.cpp
day17/: CMakeLists.txt  main.cpp  main2.cpp
day18/: CMakeLists.txt  main.cpp  main2.cpp
day19/: CMakeLists.txt  main.cpp  main2.cpp
day2/: CMakeLists.txt  main.cpp  main2.cpp
day20/: CMakeLists.txt  main.cpp  main2.cpp
day21/: CMakeLists.txt  main.cpp  main2.cpp
day22/: CMakeLists.txt  main.cpp  main2.cpp
day23/: CMakeLists.txt  main.cpp  main2.cpp
day24/: CMakeLists.txt  main.cpp  main2.cpp
day25/: CMakeLists.txt  main.cpp  main2.cpp
day3/: CMakeLists.txt  main.cpp  main2.cpp
day4/: main.cpp  main2.cpp
day5/: main.cpp  main2.cpp
day6/: CMakeLists.txt  main.cpp  main2.cpp
day6/lib/: CMakeLists.txt  day6.cpp  day6.h
day6/tests/: CMakeLists.txt  tests.cpp
day7/: main.cpp  main2.cpp
day7/lib/: CMakeLists.txt  day7.cpp  day7.h
day7/tests/: CMakeLists.txt  tests.cpp
day8/: CMakeLists.txt  main.cpp  main2.cpp
day9/: main.cpp  main2.cpp
toolchain/: Build3rdParty.cmake  CI.cmake  Clang.cmake  Dev.cmake
utils/: CMakeLists.txt
utils/include/utils/: utils.h
utils/src/: utils.cpp
utils/utils/: utils.cpp  utils.h
